<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App related -->
    <string name="app_name">2048</string>
    <string name="app_summary">Join the numbers and get to the <b>2048</b> tile!</string>

    <!-- Action bar -->
    <string name="action_new">New Game</string>
    <string name="action_info">Info</string>
    <string name="action_rate_app">Rate this App</string>
    <string name="action_other_apps">Our App Portfolio</string>
    <string name="action_other_apps_publisher">Thotsakan Apps</string>

    <!-- Info: Dialog -->
    <string name="info_dialog_title">Help</string>
    <string name="info_dialog_message"><b><u>OBJECTIVE</u></b>\nThe objective of the game is to merge tiles to reach 2048. The player can continue the game further after this objective is achieved.\n\n<b><u>CONTROLS</u></b>\nUse swipe gestures to move the tiles in the game board. When two tiles with same number collide with each other they merge into a single tile.</string>
    <string name="info_dialog_close_button_text">Close</string>

    <!-- Info: Highest Score -->
    <string name="best_score_key">Best Score</string>
    <string name="best_score_title">Best Score</string>

    <!-- Result: Dialog -->
    <string name="result_dialog_title">Result</string>
    <string name="result_dialog_message_gameOver">Game Over!</string>
    <string name="result_dialog_message_objectiveAchieved">Congratulations. You have successfully achieved the tile 2048!</string>
    <string name="result_dialog_continueGame">Continue the game</string>
    <string name="result_dialog_newGame">Play Again</string>

    <!-- AdMob -->
    <string name="ad_unit_id">ca-app-pub-4624426958453943/1853868318</string>

</resources>