<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.thotsakan.game2048.MainActivity" >

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_action_info"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/action_info"/>
    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/action_new"/>
    <item
        android:id="@+id/action_rate_app"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/action_rate_app"/>
    <item
        android:id="@+id/action_other_apps"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/action_other_apps"/>

</menu>