<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/text_padding" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="left|center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/foreground"
            android:textSize="56sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/best_score"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/text_horizontal_padding"
            android:layout_marginRight="@dimen/text_horizontal_padding"
            android:layout_weight="1"
            android:background="@color/foreground"
            android:gravity="center"
            android:textColor="@color/background"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/current_score"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/foreground"
            android:gravity="center"
            android:textColor="@color/background"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:padding="@dimen/text_padding"
        android:text="@string/app_summary"
        android:textColor="@color/foreground"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/game_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/text_padding" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/ad_unit_id" />

</LinearLayout>